<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:background="@color/white">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">
    <TextView
        android:id="@+id/txt_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/userName" />
    <EditText
        android:id="@+id/edt_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/userName"
        android:hint="@string/userName"
        android:textColorHint="@color/grey"
        android:layout_marginEnd="28dp"
        android:layout_marginStart="28dp"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/edtxt_shape"
        android:ems="10"
        android:inputType="textPersonName"/>
    <TextView
        android:id="@+id/txt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"
        android:padding="10dp"
        android:text="@string/password" />
    <EditText
        android:id="@+id/edt_password"
        android:autofillHints="@string/password"
        android:hint="@string/password"
        android:layout_width="match_parent"
        android:textColorHint="@color/grey"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginStart="28dp"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/edtxt_shape"
        android:ems="10"
        android:inputType="textPassword"/>
    <Button
        android:id="@+id/btn_login"
       android:layout_marginTop="20dp"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_shape"
        android:text="@string/login"
        android:textColor="@color/white" />
</LinearLayout>
    <ProgressBar
        android:id="@+id/progress_bar"
        style="@android:style/Widget.ProgressBar.Inverse"
        android:indeterminateTint="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:visibility="gone"
        tools:targetApi="lollipop" />
</RelativeLayout>